# revaultd

./: Cargo.toml  README.md  TODO
contrib/: ci-functional-tests.sh
doc/: API.md
src/common/: config.rs
src/daemon/: control.rs  main.rs  revaultd.rs  threadmessages.rs
src/daemon/bitcoind/: interface.rs
src/daemon/database/: interface.rs
src/daemon/jsonrpc/: api.rs
